--- a/FormationsApp/Informations/View/Informations.storyboard
+++ b/FormationsApp/Informations/View/Informations.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5eq-1N-1Xf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5eq-1N-1Xf">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -27,7 +28,7 @@
                                         <color key="textColor" red="0.36425268649999998" green="0.1160309836" blue="0.31373983620000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N9B-8P-EMw">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N9B-8P-EMw">
                                         <rect key="frame" x="97" y="0.0" width="63" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="63" id="1vj-97-yQ0"/>
@@ -40,7 +41,7 @@
                                             <action selector="freepikButtonTapped:" destination="WkO-n9-Reo" eventType="touchUpInside" id="8W2-2q-cWi"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CKi-i2-xyb">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CKi-i2-xyb">
                                         <rect key="frame" x="160" y="0.0" width="65" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="65" id="Xdb-6d-Ice"/>
@@ -53,7 +54,7 @@
                                             <action selector="eucalypButtonTapped:" destination="WkO-n9-Reo" eventType="touchUpInside" id="8zX-0E-lgs"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MqT-YQ-X6q">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MqT-YQ-X6q">
                                         <rect key="frame" x="225" y="0.0" width="75" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="75" id="yF1-Di-5gk"/>
@@ -71,7 +72,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="7Zg-1m-eJo">
                                 <rect key="frame" x="10" y="84" width="300" height="30"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fRe-VV-4V7">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fRe-VV-4V7">
                                         <rect key="frame" x="0.0" y="0.0" width="96" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="96" id="RCt-Cu-rx3"/>
@@ -84,7 +85,7 @@
                                             <action selector="smashiconsButtonTapped:" destination="WkO-n9-Reo" eventType="touchUpInside" id="RPM-Da-XtD"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8G9-zw-nVh">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8G9-zw-nVh">
                                         <rect key="frame" x="99" y="0.0" width="55" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="55" id="6Xi-zL-tHG"/>
@@ -97,7 +98,7 @@
                                             <action selector="becrisButtonTapped:" destination="WkO-n9-Reo" eventType="touchUpInside" id="mgY-BK-H7i"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j3t-gM-dCH">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j3t-gM-dCH">
                                         <rect key="frame" x="157" y="0.0" width="70" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="70" id="Ndl-Cb-vig"/>
@@ -110,7 +111,7 @@
                                             <action selector="phatplusButtonTapped:" destination="WkO-n9-Reo" eventType="touchUpInside" id="UVG-TC-8xj"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vsd-JV-3ED">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vsd-JV-3ED">
                                         <rect key="frame" x="230" y="0.0" width="70" height="30"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                         <state key="normal" title="Nhor Phai">
@@ -134,7 +135,7 @@
                                         <color key="textColor" red="0.36425268649999998" green="0.1160309836" blue="0.31373983620000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ytb-xz-dNk">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ytb-xz-dNk">
                                         <rect key="frame" x="35" y="0.0" width="265" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="265" id="OP1-Ar-klY"/>
@@ -150,16 +151,16 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="R7R-Ls-i2h">
-                                <rect key="frame" x="57.5" y="154" width="205" height="209.5"/>
+                                <rect key="frame" x="58" y="154" width="204.5" height="209.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pour plus d'info cliquer ici :" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sYt-wl-UcR">
-                                        <rect key="frame" x="0.0" y="0.0" width="205" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="204.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.36425268649999998" green="0.1160309836" blue="0.31373983620000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PC2-Or-CUj">
-                                        <rect key="frame" x="0.0" y="27.5" width="205" height="182"/>
+                                        <rect key="frame" x="0.0" y="27.5" width="204.5" height="182"/>
                                         <state key="normal" image="badgeLinkedIn_dark"/>
                                         <connections>
                                             <action selector="badgeLinkedInButtonTapped:" destination="WkO-n9-Reo" eventType="touchUpInside" id="gcA-cW-wxL"/>
@@ -179,6 +180,7 @@
                                 </connections>
                             </button>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="GRI-8g-fKQ"/>
                         <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" red="0.36425268649999998" green="0.1160309836" blue="0.31373983620000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
@@ -193,11 +195,16 @@
                             <constraint firstItem="6qV-J9-EYw" firstAttribute="centerX" secondItem="d9p-04-Z8i" secondAttribute="centerX" id="h95-0v-1iB"/>
                             <constraint firstItem="R7R-Ls-i2h" firstAttribute="top" secondItem="6qV-J9-EYw" secondAttribute="bottom" constant="10" id="moC-Qg-a6n"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="GRI-8g-fKQ"/>
                     </view>
                     <navigationItem key="navigationItem" title="Crédits" id="vYd-mW-kIU">
                         <barButtonItem key="backBarButtonItem" title="Crédits" id="Fxx-jH-kjo">
-                            <color key="tintColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="tintColor" red="0.92150276900000005" green="0.92163532969999995" blue="0.92147386070000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="stop" id="2ce-v5-PRU">
+                            <color key="tintColor" red="0.36425268649999998" green="0.1160309836" blue="0.31373983620000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <connections>
+                                <action selector="closeModalButtonTapped:" destination="WkO-n9-Reo" id="XwU-Ng-Bxm"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
@@ -209,7 +216,7 @@
             </objects>
             <point key="canvasLocation" x="151.875" y="59.154929577464792"/>
         </scene>
-        <!--Web View Informations View Controller-->
+        <!--Website-->
         <scene sceneID="0CW-lS-pgc">
             <objects>
                 <viewController id="R2G-tk-eIb" customClass="WebViewInformationsViewController" customModule="FormationsApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -226,14 +233,14 @@
                                 </wkWebViewConfiguration>
                             </wkWebView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="Bmn-w6-G71"/>
+                        <color key="backgroundColor" red="0.92150276900000005" green="0.92163532969999995" blue="0.92147386070000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="dVN-4R-MWz" firstAttribute="top" secondItem="Bmn-w6-G71" secondAttribute="top" id="6dy-Ao-58q"/>
                             <constraint firstItem="dVN-4R-MWz" firstAttribute="leading" secondItem="Bmn-w6-G71" secondAttribute="leading" id="scY-8c-gdW"/>
                             <constraint firstItem="Bmn-w6-G71" firstAttribute="bottom" secondItem="dVN-4R-MWz" secondAttribute="bottom" id="ws8-4p-bOq"/>
                             <constraint firstItem="Bmn-w6-G71" firstAttribute="trailing" secondItem="dVN-4R-MWz" secondAttribute="trailing" id="zJi-9v-yKx"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="Bmn-w6-G71"/>
                     </view>
                     <toolbarItems>
                         <barButtonItem image="square.and.arrow.up" catalog="system" id="ZzX-fz-N50">
@@ -250,7 +257,7 @@
                             </connections>
                         </barButtonItem>
                     </toolbarItems>
-                    <navigationItem key="navigationItem" id="Hov-ed-Lzy"/>
+                    <navigationItem key="navigationItem" title="Website" id="Hov-ed-Lzy"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="safariBarButtonItem" destination="phv-VL-rtX" id="sWd-Vj-2VI"/>
