--- a/FormationsApp/Skills/View/Skills.storyboard
+++ b/FormationsApp/Skills/View/Skills.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Zba-ZN-kFH">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Zba-ZN-kFH">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,7 +11,7 @@
         <!--List Skills View Controller-->
         <scene sceneID="AuG-ek-se7">
             <objects>
-                <viewController id="gNb-7M-5TE" userLabel="List Skills View Controller" customClass="ListSkillsViewController" customModule="Formations" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="gNb-7M-5TE" userLabel="List Skills View Controller" customClass="ListSkillsViewController" customModule="FormationsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="W34-6C-JZD">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -25,6 +26,7 @@
                                 </connections>
                             </tableView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="pbr-3X-Wre"/>
                         <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="LoU-s8-Qhc" secondAttribute="bottom" constant="49" id="4KS-hd-uyu"/>
@@ -32,7 +34,6 @@
                             <constraint firstItem="LoU-s8-Qhc" firstAttribute="trailing" secondItem="pbr-3X-Wre" secondAttribute="trailing" id="WKq-sf-xTy"/>
                             <constraint firstItem="LoU-s8-Qhc" firstAttribute="top" secondItem="pbr-3X-Wre" secondAttribute="top" id="z5d-bE-5rf"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="pbr-3X-Wre"/>
                     </view>
                     <navigationItem key="navigationItem" title="Compétences" id="aUA-uP-tqq">
                         <barButtonItem key="backBarButtonItem" title="Compétences" id="pzp-bC-v8w">
@@ -51,7 +52,7 @@
         <!--Détail-->
         <scene sceneID="o9g-Kq-vaA">
             <objects>
-                <viewController id="HVX-fl-jsX" customClass="DetailsSkillViewController" customModule="Formations" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="HVX-fl-jsX" customClass="DetailsSkillViewController" customModule="FormationsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qsw-4L-E9G">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -179,6 +180,7 @@
                                 </subviews>
                             </stackView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="Nk0-xb-RUy"/>
                         <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" red="0.36425268649999998" green="0.1160309836" blue="0.31373983620000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
@@ -193,7 +195,6 @@
                             <constraint firstItem="Nk0-xb-RUy" firstAttribute="trailing" secondItem="ZNk-Aj-yk0" secondAttribute="trailing" constant="10" id="vC5-rK-jcx"/>
                             <constraint firstItem="K3j-lM-N3p" firstAttribute="centerX" secondItem="qsw-4L-E9G" secondAttribute="centerX" id="wcL-JK-7af"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="Nk0-xb-RUy"/>
                     </view>
                     <navigationItem key="navigationItem" title="Détail" id="yGv-2c-Axp">
                         <barButtonItem key="backBarButtonItem" title="Détail" id="frU-nu-MIL">
@@ -221,9 +222,7 @@
         <scene sceneID="fci-lE-GPg">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Zba-ZN-kFH" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Compétences" image="skill" id="ScR-Bl-gor">
-                        <color key="badgeColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </tabBarItem>
+                    <tabBarItem key="tabBarItem" title="Compétences" image="skill" id="ScR-Bl-gor"/>
                     <toolbarItems/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Auv-sK-TSD">
@@ -247,13 +246,13 @@
         <!--Website-->
         <scene sceneID="W0Q-dp-l1W">
             <objects>
-                <viewController id="EfI-yr-5NI" customClass="WebsiteSkillViewController" customModule="Formations" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="EfI-yr-5NI" customClass="WebsiteSkillViewController" customModule="FormationsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="goB-Eo-Exu">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="jY7-CG-30n"/>
                         <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" red="0.36425268649999998" green="0.1160309836" blue="0.31373983620000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                        <viewLayoutGuide key="safeArea" id="jY7-CG-30n"/>
                     </view>
                     <toolbarItems>
                         <barButtonItem image="square.and.arrow.up" catalog="system" id="jVA-e1-aA4">
